refactor: consolidate ta4j-cli commands